# BpmDetect

./: .gitignore  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/ginkage/bpmdetect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bpm_detect_jni.cpp  correlate.cpp  correlate.h  freq_data.h  sliding_median.h  wavelet.cpp  wavelet.h  wavelet_bpm_detector.cpp  wavelet_bpm_detector.h
app/src/main/java/com/ginkage/bpmdetect/: BpmDetect.java  BpmThread.java  CaptureThread.java  CircularBuffer.java  FftData.java  FreqData.java  FullscreenActivity.java  MediaProjectionService.java  MediaProjectionServiceConnection.java  RenderThread.java  Sample.java  SlidingMedian.java
app/src/main/res/layout/: activity_fullscreen.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ginkage/bpmdetect/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
